# routes/index.js
@@ -1,13 +1,18 @@
 const router = require('express').Router();
+const passport = require('passport'); 
 
 router.use('/', require('./swagger'));
 
-router.get('/', (req, res) => { 
-    //#swagger.tags=['Hello World'] 
-    res.send('Hello World');
+router.get('/login', passport.authenticate('github', { scope: 'user:email' }));
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
 });
 
-//  movies
+
+// movies
 router.use('/movies', require('./movies'));
 
 // directors
